--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,18 @@ body {
   padding: 1rem;
 }
 
+.form-field-container {
+  display: flex;
+  flex-direction: column;
+  height: 20rem;
+  flex-wrap: wrap;
+  /* border: 2px solid red; */
+  /* column-gap: 2rem; */
+  justify-content: flex-start;
+
+  row-gap: 1rem;
+}
+
 .form-input-label-container {
   display: flex;
   flex-direction: column;
@@ -214,13 +226,14 @@ body {
 .dialog-content {
   padding: 0.5rem 1rem;
   position: absolute;
-  /* border: 2px solid red; */
+  border: 2px solid red;
   align-self: center;
   background-color: #fff;
   border-radius: 3px;
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
+  width: 30rem;
 }
 
 .dialog-title {
@@ -247,6 +260,10 @@ body {
   row-gap: 1rem;
   display: flex;
   flex-direction: column;
+  margin-top: 1rem;
+  padding: 1rem;
+
+  /* border: 2px solid blue; */
 }
 
 .edit-coffee-fieldset {
@@ -262,6 +279,14 @@ body {
   display: flex;
   column-gap: 0.5rem;
 }
+
+.select-content {
+  border: 1px solid #000;
+  padding: 0.5rem;
+  border-radius: 3px;
+  background-color: #fff;
+}
+
 /* Animations */
 
 @keyframes slide-down {
