--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,15 @@ body {
   width: fit-content;
 }
 
+.form-input-label-container.filter {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  column-gap: 0.5rem;
+  margin-bottom: 1rem;
+  align-self: flex-start;
+}
+
 .form-error-span {
   color: red;
 }
@@ -139,16 +148,6 @@ body {
   width: fit-content;
 }
 
-.logout-button {
-  border: none;
-  padding: 0.5rem 1rem;
-  background-color: #bface0;
-  font-weight: bolder;
-  color: #363062;
-  cursor: pointer;
-  border-radius: 3px;
-}
-
 /* Home page */
 .home-section {
   display: flex;
@@ -160,41 +159,51 @@ body {
   border: 2px solid green;
 }
 
-.home-accordion-root {
+.home-section-h2 {
+  position: absolute;
+  top: 0rem;
+  right: 0rem;
+}
+
+/* Coffee Views*/
+.accordion-root {
   border: 2px solid red;
   position: absolute;
   top: calc(30% - 5rem);
   width: 100%;
 }
-.home-accordion-item {
+
+.accordion-item {
   border: 2px solid hotpink;
 }
-.home-accordion-trigger {
+
+.accordion-trigger {
   width: 100%;
   cursor: pointer;
   text-align: right;
 }
-.home-accordion-content {
+
+.accordion-content {
   overflow: hidden;
   position: relative;
 }
 
-.home-accordion-content-container {
+.accordion-content-container {
   display: flex;
   flex-direction: row;
   column-gap: 5rem;
   padding: 0.5rem;
   justify-content: space-between;
-  height: 10rem;
+  height: fit-content;
   margin-bottom: 0.5rem;
 }
-.home-accordion-content-left {
+.accordion-content-left {
   display: flex;
   flex-direction: column;
   row-gap: 1rem;
 }
 
-.home-accordion-content-right {
+.accordion-content-right {
   display: flex;
   height: fit-content;
   flex-direction: column;
@@ -202,20 +211,72 @@ body {
   row-gap: 1rem;
 }
 
-.home-accordion-p {
+.accordion-p {
   margin: 0rem;
 }
 
-.home-accordion-p.notes {
+.accordion-p.notes {
   /* border: 2px solid purple; */
   width: 25rem;
 }
 
-.home-accordion-content[data-state='open'] {
+.accordion-content[data-state='open'] {
   animation: slide-down 500ms cubic-bezier(0.03, -0.02, 0.3, 0.98);
 }
-.home-accordion-content[data-state='closed'] {
+.accordion-content[data-state='closed'] {
   animation: slide-up 500ms cubic-bezier(0.03, -0.02, 0.3, 0.98);
+}
+
+.table-root {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+
+.table-head {
+}
+.table-row {
+  display: flex;
+  column-gap: 1rem;
+  /* border: 2px solid red; */
+  justify-content: space-between;
+  padding: 0rem 0.5rem;
+}
+.table-row.head {
+  text-align: center;
+  height: 100%;
+  align-items: center;
+  border: 1px solid #000;
+  background-color: #203239;
+  color: #fff;
+}
+
+.table-cell {
+  /* border: 2px solid green; */
+  min-width: 6rem;
+  max-width: 6rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.table-seperator {
+  height: 100%;
+  border: 0.25px solid #000;
+}
+
+.table-cell.head {
+  /* background-color: yellow; */
+  height: 100%;
+  align-items: center;
+  /* border: 2px solid blue; */
+}
+.table-body {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  background-color: #e9d5ca;
+  padding: 0.5rem 0rem;
 }
 
 /* Dialog */
@@ -244,7 +305,8 @@ body {
   display: flex;
   flex-direction: column;
   row-gap: 0.5rem;
-  width: 30rem;
+  max-width: 30rem;
+  width: fit-content;
 }
 
 .dialog-title {
@@ -273,8 +335,8 @@ body {
   flex-direction: column;
   margin-top: 1rem;
   padding: 1rem;
-
-  /* border: 2px solid blue; */
+  width: 25rem;
+  border: 2px solid blue;
 }
 
 .edit-coffee-form.add-coffee {
@@ -282,7 +344,6 @@ body {
   width: 100%;
   justify-content: center;
   align-items: center;
-  /* height: 100%; */
   margin-top: 0rem;
 }
 
@@ -318,12 +379,67 @@ body {
 .account-settings-page {
 }
 
+.account-form-input-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+
 .account-info-container {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.account-details-form {
+  /* border: 2px solid green; */
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+  align-items: center;
+}
+
+/* Buttons */
+.form-save-button,
+.logout-button,
+.dialog-trigger.edit {
+  width: fit-content;
+  border: none;
+  padding: 0.5rem 1rem;
+  background-color: #bface0;
+  font-weight: bolder;
+  color: #363062;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.password-reset {
+  border: none;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0);
+  padding: 0rem;
+  color: #363062;
+  font-size: 1rem;
+}
+
+.password-reset:hover {
+  color: green;
+}
+
+.toggle-view {
+  position: absolute;
+  top: 5rem;
+  right: 0rem;
+}
+
+.table-head-button {
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  cursor: pointer;
+  color: #fff;
 }
 
 /* Animations */
