--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;500&display=swap');
 
+:root {
+  --black: rgba(3, 2, 1, 0);
+  --purple: #645caa;
+  --white: #fff;
+}
+
 * {
   font-family: 'Red Hat Text', sans-serif;
+  background-color: rgba(3, 2, 1, 1);
+  color: #fff;
 }
 
 :root {
@@ -18,8 +26,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 100vh;
+  height: fit-content;
+  max-height: fit-content;
   width: 100%;
+  /* overflow: scroll; */
 }
 
 /* Radix Tab component*/
@@ -41,6 +51,11 @@ body {
 }
 
 /* Forms */
+
+.form-h2 {
+  font-size: 2rem;
+  color: var(--purple);
+}
 
 .sign-up-form,
 .sign-in-form {
@@ -64,14 +79,81 @@ body {
   row-gap: 1rem;
 }
 
+.add-coffee-input {
+  border: none;
+  border-bottom: 2px solid black;
+  width: 20rem;
+  font-size: 1.6rem;
+}
+
+.radio-button {
+  height: 2rem;
+  border: 2px solid red;
+}
+
+.add-coffee-label {
+  font-size: 2rem;
+}
+
+.add-coffee-label.radio {
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  column-gap: 0.7rem;
+}
+
+.add-coffee-input:focus {
+  outline: none;
+  border-bottom: 2px solid #bface0;
+}
+
+.add-coffee-input.text-area {
+  height: 10rem;
+  width: 30rem;
+  /* max-width: 20rem; */
+}
+
+.add-coffee-form-section.one {
+  display: flex;
+  border: 2px solid blue;
+  width: fit-content;
+  justify-content: space-between;
+  column-gap: 2rem;
+  padding: 1rem;
+}
+
+.add-coffee-form-section.two {
+  /* border: 2px solid red; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.select-container {
+  /* border: 2px solid green; */
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  row-gap: 2rem;
+}
+
+.select-dropdown {
+  border: none;
+  border-bottom: 2px solid #363062;
+  outline: none;
+  font-size: 1.2rem;
+}
+
 .form-field-container.add-coffee {
   /* border: 2px solid green; */
-  width: 50%;
+  /* width: 50%; */
   /* height: fit-content; */
   flex-wrap: wrap;
   flex-flow: column wrap;
   align-content: space-between;
-  height: 28rem;
+  height: fit-content;
+  width: fit-content;
 }
 
 .form-input-label-container {
@@ -112,25 +194,40 @@ body {
 
 /* Navigation */
 .side-bar {
-  /* height: 100%; */
-  /* border: 2px solid red; */
+  height: fit-content;
+  border: 2px solid red;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
-  padding: 1rem;
+  /* padding: 0rem 1rem; */
+  position: fixed;
+  bottom: 0rem;
+  z-index: 2;
+  align-items: center;
+  width: 100%;
 }
 
 .nav-root {
   /* border: 2px solid blue; */
-  /* height: 100%; */
+  display: flex;
+  height: 6rem;
+  align-items: center;
+}
+
+.nav-menu-toggle {
+  height: fit-content;
+  border: none;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
 }
 
 .nav-list {
   list-style: none;
   padding: 0rem;
   display: flex;
-  flex-direction: column;
-  row-gap: 3rem;
+  flex-direction: row;
+  column-gap: 5rem;
+  /* border: 2px solid green; */
 }
 
 .nav-item {
@@ -174,13 +271,16 @@ body {
 }
 
 .accordion-item {
-  border: 2px solid hotpink;
+  /* border: none */
 }
 
 .accordion-trigger {
   width: 100%;
   cursor: pointer;
   text-align: right;
+  border: none;
+  font-size: 1.5rem;
+  border-bottom: 1px solid white;
 }
 
 .accordion-content {
@@ -341,7 +441,7 @@ body {
 
 .edit-coffee-form.add-coffee {
   border: 2px solid red;
-  width: 100%;
+  width: fit-content;
   justify-content: center;
   align-items: center;
   margin-top: 0rem;
@@ -350,6 +450,10 @@ body {
 .edit-coffee-fieldset {
   display: flex;
   flex-direction: column;
+}
+
+.edit-coffee-legend {
+  font-size: 2rem;
 }
 
 .edit-coffee-input.text-area {
@@ -405,7 +509,8 @@ body {
 /* Buttons */
 .form-save-button,
 .logout-button,
-.dialog-trigger.edit {
+.dialog-trigger.edit,
+.toggle-view {
   width: fit-content;
   border: none;
   padding: 0.5rem 1rem;
@@ -442,6 +547,9 @@ body {
   color: #fff;
 }
 
+.logout-button {
+  margin-right: 1rem;
+}
 /* Notifications */
 .form-success-notification {
   color: green;
